# multi-http-client

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: dependencies.cmake  variables.cmake
config/dev/: chain-nces.ini  chain-nces.json  chain-own.json  own-chain.ini
config/release/: settings.json
include/: curlmanager.h  httpclientasio.h
include/core/: configmanager.h  constants.h  cryptooperations.h  curlmanager.h  httpclientasio.h  logmanager.h  utils.h
include/handlers/: networkfilehandler.h
src/: curlmanager.cpp  httpclientasio.cpp  main.cpp
src/core/: configmanager.cpp  cryptooperations.cpp  curlmanager.cpp  httpclientasio.cpp  logmanager.cpp  main.cpp  utils.cpp
src/handlers/: networkfilehandler.cpp
